K1J-1183: Added support for FK7810 (#340)