@@ -18,7 +18,6 @@
  */
 package se.inera.statistics.service.warehouse;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
 import java.util.Collection;
@@ -55,19 +54,20 @@ public enum IntygType {
     FK7809("LUMEK", "fk7809", "FK 7809", "FK 7809 Läkarutlåtande för merkostnadsersättning", true),
     TS8071("TS8071", "ts8071", "TS8071",
         "TS8071 Läkarintyg för högre körkortsbehörigheter, taxiförarlegitimation och på begäran av Transportstyrelsen", true),
-    FK3221("LU_OMV_MEK", "fk3221", "FK 3221", "FK 3221 Läkarutlåtande för omvårdnadsbidrag och merkostnadsersättning", true);
+    FK3221("LU_OMV_MEK", "fk3221", "FK 3221", "FK 3221 Läkarutlåtande för omvårdnadsbidrag eller merkostnadsersättning", true),
+    FK7810("LUAS", "fk7810", "FK 7810", "FK 7810 Läkarutlåtande för assistansersättning", true);
 
     private static final ImmutableSet<IntygType> INCLUDED_IN_KOMPLETTERING_REPORT = ImmutableSet.of(LISJP, LUSE, LUAE_NA, LUAE_FS,
         FK7472, FK3226, FK7809, FK7427, FK7426, FK3221);
 
     private static final ImmutableSet<IntygType> IS_SJUKPENNING = ImmutableSet.of(LISJP, FK7263);
 
-    private static final ImmutableList<IntygType> INCLUDED_IN_INTYG_TOTALT_REPORT = ImmutableList.of(
+    private static final List<IntygType> INCLUDED_IN_INTYG_TOTALT_REPORT = List.of(
         AF00213, AF00251, AG114, AG7804, DB, DOI, LISJP, LUSE, LUAE_NA, LUAE_FS, TSTRK1009, TSTRK1007, TSTRK1031, TSTRK1062, FK7210,
-        FK7472, FK3226, FK7809, TS8071, FK7427, FK7426, FK3221);
+        FK7472, FK3226, FK7809, TS8071, FK7427, FK7426, FK3221, FK7810);
 
-    private static final ImmutableList<IntygType> INCLUDED_IN_INTYG_FILTER = ImmutableList.of(SJUKPENNING, LUSE, LUAE_NA, LUAE_FS, FK3226,
-        FK7809, FK7427, FK7426, FK3221);
+    private static final List<IntygType> INCLUDED_IN_INTYG_FILTER = List.of(SJUKPENNING, LUSE, LUAE_NA, LUAE_FS, FK3226,
+        FK7809, FK7427, FK7426, FK3221, FK7810);
 
 
     private final String kodverksKod; //From https://riv-ta.atlassian.net/wiki/download/attachments/270532953/Kv%20intygstyp.xlsx
@@ -82,10 +82,6 @@ public enum IntygType {
         this.text = text;
         this.shortText = shortText;
         this.isSupportedIntyg = isSupportedIntyg;
-    }
-
-    public String getKodverksKod() {
-        return kodverksKod;
     }
 
     public String getItIntygType() {
